--- a/Grading-Administration/Gradings-Administration-client/MainWindow.xaml
+++ b/Grading-Administration/Gradings-Administration-client/MainWindow.xaml
@@ -4,9 +4,40 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Gradings_Administration_client"
+        xmlns:views="clr-namespace:GradingAdmin_client.Views"
+        xmlns:viewmodelone="clr-namespace:Gradings_Administration_client.ViewModels"
+        xmlns:viewmodels="clr-namespace:GradingAdmin_client.ViewModels"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Window.DataContext>
+        <viewmodelone:MainViewModel/>
+    </Window.DataContext>
+    <Window.Resources>
+        <DataTemplate x:Name="StudentView" DataType="{x:Type viewmodels:StudentViewModel}">
+            <views:StudentView/>
+        </DataTemplate>
 
+        <DataTemplate x:Name="TeacherView" DataType="{x:Type viewmodels:TeacherViewModel}">
+            <views:TeacherView/>
+        </DataTemplate>
+
+        <DataTemplate x:Name="AdminView" DataType="{x:Type viewmodels:AdminViewModel}">
+            <views:AdminView/>
+        </DataTemplate>
+
+        <DataTemplate x:Name="LoginView" DataType="{x:Type viewmodels:LoginViewModel}">
+            <views:LoginView/>
+        </DataTemplate>
+
+    </Window.Resources>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <ContentControl Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1" Grid.RowSpan="1" Content="{Binding}"/>
     </Grid>
 </Window>
