--- a/Grading-Administration/Gradings-Administration-client/Views/AdminView.xaml
+++ b/Grading-Administration/Gradings-Administration-client/Views/AdminView.xaml
@@ -1,14 +1,13 @@
-﻿<Page x:Class="GradingAdmin_client.Views.AdminView"
+﻿<UserControl x:Class="GradingAdmin_client.Views.AdminView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:GradingAdmin_client.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="AdminView">
+      d:DesignHeight="450" d:DesignWidth="800">
 
     <Grid>
         
     </Grid>
-</Page>
+</UserControl>
