--- a/Grading-Administration/Gradings-Administration-client/Views/LoginView.xaml
+++ b/Grading-Administration/Gradings-Administration-client/Views/LoginView.xaml
@@ -1,14 +1,19 @@
-﻿<Page x:Class="GradingAdmin_client.Views.LoginView"
+﻿<UserControl x:Class="GradingAdmin_client.Views.LoginView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:GradingAdmin_client.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="LoginView">
+      d:DesignHeight="450" d:DesignWidth="800">
 
-    <Grid>
-        
+    <Grid Background="White">
+        <Label Content="Gebruikersnaam:" HorizontalAlignment="Left" Margin="279,87,0,0" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Margin="282,119,0,0" Text="{Binding UserName}" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+
+        <Label Content="Wachtwoord:" HorizontalAlignment="Left" Margin="278,165,0,0" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Margin="283,193,0,0" Text="{Binding Password}" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button Content="Login" HorizontalAlignment="Left" Margin="385,266,0,0" VerticalAlignment="Top" Command="{Binding Path=SendLoginCommand}"/>
+
     </Grid>
-</Page>
+</UserControl>
