--- a/Grading-Administration/Gradings-Administration-client/Views/StudentView.xaml
+++ b/Grading-Administration/Gradings-Administration-client/Views/StudentView.xaml
@@ -1,14 +1,15 @@
-﻿<Page x:Class="GradingAdmin_client.Views.StudentView"
+﻿<UserControl x:Class="GradingAdmin_client.Views.StudentView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:GradingAdmin_client.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="StudentView">
+      d:DesignHeight="450" d:DesignWidth="800">
 
-    <Grid>
-        
+    <Grid Background="White">
+        <Rectangle HorizontalAlignment="Left" Height="450" Stroke="Black" VerticalAlignment="Center" Width="150"/>
+        <Button Content="Dashboard" HorizontalAlignment="Left" Margin="0,137,0,0" VerticalAlignment="Top" Width="150" Height="40"/>
+        <Button Content="Grades" HorizontalAlignment="Left" Margin="0,177,0,0" VerticalAlignment="Top" Width="150" Height="40"/>
     </Grid>
-</Page>
+</UserControl>
