--- a/Grading-Administration/Gradings-Administration-client/Views/StudentView.xaml
+++ b/Grading-Administration/Gradings-Administration-client/Views/StudentView.xaml
@@ -1,15 +1,27 @@
-﻿<UserControl x:Class="GradingAdmin_client.Views.StudentView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:GradingAdmin_client.Views"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800">
-
+﻿<UserControl x:Class="Gradings_Administration_client.Views.StudentView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:Gradings_Administration_client.Views"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
-        <Rectangle HorizontalAlignment="Left" Height="450" Stroke="Black" VerticalAlignment="Center" Width="150"/>
-        <Button Content="Dashboard" HorizontalAlignment="Left" Margin="0,137,0,0" VerticalAlignment="Top" Width="150" Height="40"/>
-        <Button Content="Grades" HorizontalAlignment="Left" Margin="0,177,0,0" VerticalAlignment="Top" Width="150" Height="40"/>
+        <Rectangle HorizontalAlignment="Left" Margin="0,0,0,0" Stroke="Black" VerticalAlignment="Top" Width="150" Height="450"/>
+        <Button Content="Dashboard" HorizontalAlignment="Left" Margin="0,150,0,0" VerticalAlignment="Top" Width="150" Height="40"/>
+        <Button Content="Grades" HorizontalAlignment="Left" Margin="0,190,0,0" VerticalAlignment="Top" Width="150" Height="40"/>
+        <Button Content="Modules" HorizontalAlignment="Left" Margin="0,230,0,0" VerticalAlignment="Top" Width="150" Height="40"/>
+        <Label Content="{Binding StudentName}" HorizontalAlignment="Left" Margin="68,96,0,0" VerticalAlignment="Top"/>
+        <Label Content="{Binding StudentId}" HorizontalAlignment="Left" Margin="56,111,0,0" VerticalAlignment="Top"/>
+        <ListView Width="200" Height="200" Margin="179,29,421,221">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
     </Grid>
 </UserControl>
