--- a/Grading-Administration/Gradings-Administration-client/Views/StudentView.xaml
+++ b/Grading-Administration/Gradings-Administration-client/Views/StudentView.xaml
@@ -13,15 +13,27 @@
         <Button Content="Modules" HorizontalAlignment="Left" Margin="0,230,0,0" VerticalAlignment="Top" Width="150" Height="40"/>
         <Label Content="{Binding StudentName}" HorizontalAlignment="Left" Margin="68,96,0,0" VerticalAlignment="Top"/>
         <Label Content="{Binding StudentId}" HorizontalAlignment="Left" Margin="56,111,0,0" VerticalAlignment="Top"/>
-        <ListView Width="200" Height="200" Margin="179,29,421,221">
+        <ListView Height="200" Width="250" Margin="181,36,369,214" ItemsSource="{Binding Grades}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
-                        
+
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        
+        <ListView Width="250" Height="200" Margin="498,37,52,213" ItemsSource="{Binding Modules}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+
 
     </Grid>
 </UserControl>
