--- a/Grading-Administration/Gradings-Administration-client/Views/TeacherView.xaml
+++ b/Grading-Administration/Gradings-Administration-client/Views/TeacherView.xaml
@@ -5,9 +5,29 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:GradingAdmin_client.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800">
+      d:DesignHeight="1080" d:DesignWidth="1920">
 
-    <Grid>
-        
+    <Grid Background="White">
+        <ListView Margin="42,138,987,100" ItemsSource="{Binding Grades}" SelectedItem="{Binding SelectedGrade}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal" Height="80">
+                        
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <ListView Margin="1058,138,84,100" ItemsSource="{Binding Modules}" SelectedItem="{Binding SelectedModule}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal" Height="80">
+                        
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <Label Content="Modules" HorizontalAlignment="Left" Margin="48,72,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="36"/>
+        <Label Content="Student bij modules" HorizontalAlignment="Left" Margin="1065,72,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="36"/>
     </Grid>
 </UserControl>
