Can enter grade, is checked if its a valid double, else shows error message, send grade to server, not yet implemented in the server

--- a/Grading-Administration/Gradings-Administration-client/App.xaml
+++ b/Grading-Administration/Gradings-Administration-client/App.xaml
@@ -31,5 +31,9 @@
         <DataTemplate x:Name="PopUpModuleView" DataType="{x:Type viewmodelsone:ModulePopUpViewModel}">
             <viewsone:ModulePopUpView/>
         </DataTemplate>
+
+        <DataTemplate x:Name="AddGradeView" DataType="{x:Type viewmodelsone:AddGradeViewModel}">
+            <viewsone:AddGradeView/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
