--- a/Grading-Administration/Gradings-Administration-client/Views/AdminView.xaml
+++ b/Grading-Administration/Gradings-Administration-client/Views/AdminView.xaml
@@ -16,13 +16,13 @@
         <TextBox HorizontalAlignment="Left" Margin="274,192,0,0" Text="{Binding LastName}" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="200"/>
         <Label Content="Voornaam" HorizontalAlignment="Left" Margin="32,160,0,0" VerticalAlignment="Top" FontSize="15" FontWeight="Bold"/>
         <Label Content="Achternaam" HorizontalAlignment="Left" Margin="272,160,0,0" VerticalAlignment="Top" FontSize="15" FontWeight="Bold"/>
-        <Label Content="E-mail" HorizontalAlignment="Left" Margin="32,250,0,0" VerticalAlignment="Top" FontSize="15" FontWeight="Bold"/>
-        <TextBox HorizontalAlignment="Left" Margin="38,284,0,0" Text="{Binding Mail}" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="438"/>
-        <DatePicker HorizontalAlignment="Left" Margin="38,378,0,0" VerticalAlignment="Top" Height="35" Width="200" SelectedDate="{Binding BirthDate}" DisplayDate="{Binding DateTime.Now}"/>
-        <Button Content="Gebruiker toevoegen" HorizontalAlignment="Left" Margin="170,436,0,0" VerticalAlignment="Top" Height="35" Width="200" FontSize="15"/>
-        <Label Content="Geboortedatum" HorizontalAlignment="Left" Margin="32,346,0,0" VerticalAlignment="Top" FontSize="15" FontWeight="Bold"/>
-        <Label Content="Type gebruiker" HorizontalAlignment="Left" Margin="272,346,0,0" VerticalAlignment="Top" FontSize="15" FontWeight="Bold"/>
-        <ComboBox HorizontalAlignment="Left" Margin="272,378,0,0" VerticalAlignment="Top" Height="30" Width="200" SelectedIndex="{Binding userType}" ItemsSource="{Binding userTypes}"/>
+        <Label Content="E-mail" HorizontalAlignment="Left" Margin="32,236,0,0" VerticalAlignment="Top" FontSize="15" FontWeight="Bold"/>
+        <TextBox HorizontalAlignment="Left" Margin="38,270,0,0" Text="{Binding Mail}" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="438"/>
+        <DatePicker HorizontalAlignment="Left" Margin="38,410,0,0" VerticalAlignment="Top" Height="35" Width="200" SelectedDate="{Binding BirthDate}" DisplayDate="{Binding DateTime.Now}"/>
+        <Button Content="Gebruiker toevoegen" HorizontalAlignment="Left" Margin="170,468,0,0" VerticalAlignment="Top" Height="35" Width="200" FontSize="15"/>
+        <Label Content="Geboortedatum" HorizontalAlignment="Left" Margin="32,378,0,0" VerticalAlignment="Top" FontSize="15" FontWeight="Bold"/>
+        <Label Content="Type gebruiker" HorizontalAlignment="Left" Margin="272,378,0,0" VerticalAlignment="Top" FontSize="15" FontWeight="Bold"/>
+        <ComboBox HorizontalAlignment="Left" Margin="272,410,0,0" VerticalAlignment="Top" Height="30" Width="200" SelectedIndex="{Binding userType}" ItemsSource="{Binding userTypes}"/>
 
 
         <!-- Module toevoegen -->
@@ -100,6 +100,10 @@
             </ListView.View>
         </ListView>
         <Button Content="Student koppelen" HorizontalAlignment="Left" Margin="1480,882,0,0" VerticalAlignment="Top" Height="36" Width="200" FontSize="15"/>
-        
+        <Label Content="Gebruikersnaam" HorizontalAlignment="Left" Margin="32,310,0,0" VerticalAlignment="Top" FontSize="15" FontWeight="Bold"/>
+        <TextBox HorizontalAlignment="Left" Margin="38,344,0,0" Text="{Binding UserName}" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="200"/>
+        <TextBox HorizontalAlignment="Left" Margin="274,344,0,0" Text="{Binding Password}" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="200"/>
+        <Label Content="Wachtwoord" HorizontalAlignment="Left" Margin="276,310,0,0" VerticalAlignment="Top" FontSize="15" FontWeight="Bold"/>
+
     </Grid>
 </UserControl>
