--- a/Grading-Administration/Gradings-Administration-client/Views/AdminView.xaml
+++ b/Grading-Administration/Gradings-Administration-client/Views/AdminView.xaml
@@ -36,7 +36,7 @@
         <DatePicker HorizontalAlignment="Left" Margin="272,734,0,0" Text="TextBox" VerticalAlignment="Top" Height="35" Width="200" DisplayDate="{Binding DateTime.Now}" SelectedDate="{Binding EndDate}"/>
         <TextBox HorizontalAlignment="Left" Margin="38,826,0,0" VerticalAlignment="Top" Height="35" Width="200" Text="{Binding ECTAmount}"/>
         <ComboBox HorizontalAlignment="Left" Margin="272,826,0,0" VerticalAlignment="Top" Height="35" Width="200" SelectedValue="{Binding GradeType}" ItemsSource="{Binding GradeTypes}"/>
-        <Button Content="Student toevoegen" HorizontalAlignment="Left" Margin="170,882,0,0" VerticalAlignment="Top" Height="35" Width="200" FontSize="15" Command="{Binding AddModuleCommand}"/>
+        <Button Content="Module toevoegen" HorizontalAlignment="Left" Margin="170,882,0,0" VerticalAlignment="Top" Height="35" Width="200" FontSize="15" Command="{Binding AddModuleCommand}"/>
         <Label Content="Aantal ECT's" HorizontalAlignment="Left" Margin="32,796,0,0" VerticalAlignment="Top" FontSize="15" FontWeight="Bold"/>
         <GridSplitter HorizontalAlignment="Left" Margin="552,122,0,0" VerticalAlignment="Top" Width="2" Height="850"/>
 
@@ -44,7 +44,7 @@
 
         <!-- Gebruiker verwijderen -->
         <Label Content="Gebruiker" HorizontalAlignment="Left" Margin="584,112,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" FontStyle="Italic"/>
-        <ListView Width="600" Margin="586,166,734,638" ItemsSource="{Binding UserList}" SelectedItem="{Binding SelectedDeleteUser}">
+        <ListView Width="600" Margin="586,166,734,574" ItemsSource="{Binding UserList}" SelectedItem="{Binding SelectedDeleteUser}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" Height="60">
@@ -53,24 +53,26 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Button Content="Docent verwijderen" HorizontalAlignment="Left" Margin="794,468,0,0" VerticalAlignment="Top" Height="35" Width="200" FontSize="15" Command="{Binding DeleteUserCommand}"/>
+        <Button Content="Gebruiker verwijderen" HorizontalAlignment="Left" Margin="794,468,0,0" VerticalAlignment="Top" Height="35" Width="200" FontSize="15" Command="{Binding DeleteUserCommand}"/>
 
-        <!-- Mody verwijderen -->
+        <!-- Module verwijderen -->
         <Label Content="Module" HorizontalAlignment="Left" Margin="584,562,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" FontStyle="Italic"/>
-        <ListView Width="600" Margin="586,610,734,212">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn/>
-                </GridView>
-            </ListView.View>
+        <ListView Width="600" Margin="586,610,734,151" ItemsSource="{Binding ModuleList}" SelectedItem="{Binding SelectedDeleteModule}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal" Height="60">
+                        <Label Height="50" Content="{Binding Name}" Margin="11" FontWeight="Bold"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
         </ListView>
-        <Button Content="Module verwijderen" HorizontalAlignment="Left" Margin="794,882,0,0" VerticalAlignment="Top" Height="36" Width="200" FontSize="15"/>
+        <Button Content="Module verwijderen" HorizontalAlignment="Left" Margin="794,882,0,0" VerticalAlignment="Top" Height="36" Width="200" FontSize="15" Command="{Binding DeleteModuleCommand}"/>
 
         <GridSplitter HorizontalAlignment="Left" Margin="1220,122,0,0" VerticalAlignment="Top" Width="2" Height="850"/>
 
         <Label Content="Gebruiker koppelen" HorizontalAlignment="Left" Margin="1252,25,0,0" VerticalAlignment="Top" FontSize="30" FontWeight="Bold"/>
         <Label Content="Docent" HorizontalAlignment="Left" Margin="1252,112,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" FontStyle="Italic"/>
-        <ListView Margin="1252,166,378,662">
+        <ListView Margin="1252,166,378,662" ItemsSource="{Binding TeacherList}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
@@ -106,10 +108,12 @@
         <TextBox HorizontalAlignment="Left" Margin="38,344,0,0" Text="{Binding UserName}" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="200"/>
         <TextBox HorizontalAlignment="Left" Margin="274,344,0,0" Text="{Binding Password}" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="200"/>
         <Label Content="Wachtwoord" HorizontalAlignment="Left" Margin="276,310,0,0" VerticalAlignment="Top" FontSize="15" FontWeight="Bold"/>
-        <Label Content="Succesvol toegevoegd" HorizontalAlignment="Left" Margin="118,568,0,0" VerticalAlignment="Top" FontStyle="Italic" Foreground="LightGreen" Opacity="{Binding ModuleSuccesOpacity}"/>
+        <Label Content="Succesvol toegevoegd" HorizontalAlignment="Left" Margin="118,568,0,0" VerticalAlignment="Top" FontStyle="Italic" Foreground="Green" Opacity="{Binding ModuleSuccesOpacity}"/>
         <Label Content="Niet toegevoegd" HorizontalAlignment="Left" Margin="118,568,0,0" VerticalAlignment="Top" FontStyle="Italic" Foreground="Red" Opacity="{Binding ModuleFailOpacity}"/>
-        <Label Content="Gebruiker succesvol verwijderd" HorizontalAlignment="Left" Margin="694,118,0,0" VerticalAlignment="Top" Foreground="LightGreen" Opacity="{Binding UserSuccesDeleteOpacity}" FontStyle="Italic"/>
+        <Label Content="Gebruiker succesvol verwijderd" HorizontalAlignment="Left" Margin="694,118,0,0" VerticalAlignment="Top" Foreground="Green" Opacity="{Binding UserSuccesDeleteOpacity}" FontStyle="Italic"/>
         <Label Content="Gebruiker niet verwijderd" HorizontalAlignment="Left" Margin="694,118,0,0" VerticalAlignment="Top" Foreground="Red" Opacity="{Binding UserFailDeleteOpacity}" FontStyle="Italic"/>
+        <Label Content="Module niet verwijderd" HorizontalAlignment="Left" Margin="694,569,0,0" VerticalAlignment="Top" Foreground="Red" Opacity="{Binding ModuleFailDeleteOpacity}" FontStyle="Italic"/>
+        <Label Content="Module succesvol verwijderd" HorizontalAlignment="Left" Margin="694,569,0,0" VerticalAlignment="Top" Foreground="Green" Opacity="{Binding ModuleSuccesDeleteOpacity}" FontStyle="Italic"/>
 
     </Grid>
 </UserControl>
